--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,26 @@
   <head>
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <script>
+            (function () {
+                function getCookie(name) {
+                    const nameEQ = name + "=";
+                    const ca = document.cookie.split(";");
+                    for (let i = 0; i < ca.length; i++) {
+                        let c = ca[i];
+                        while (c.charAt(0) === " ") c = c.substring(1, c.length);
+                        if (c.indexOf(nameEQ) === 0) return c.substring(nameEQ.length, c.length);
+                    }
+                    return null;
+                }
+
+                const theme = getCookie("theme");
+                if (theme === "dark") {
+                    document.documentElement.classList.add("dark-theme");
+                    document.documentElement.setAttribute("data-theme", "dark");
+                }
+            })();
+        </script>
   </head>
   <body>
     <div id="root"></div>
